--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,19 +958,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'mode': 'markers',\n",
-       " 'name': 'comedy show data',\n",
-       " 'x': [200, 400, 300, 600],\n",
-       " 'y': [400, 700, 500, 900]}"
+       "{'x': [200, 400, 300, 600],\n",
+       " 'y': [400, 700, 500, 900],\n",
+       " 'mode': 'markers',\n",
+       " 'name': 'comedy show data'}"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,21 +1003,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'show_starting_line' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-42-572e6bc202e2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrace_show_line\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mm_b_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshow_starting_line\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'm'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshow_starting_line\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'b'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshow_x_values\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'starting line'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'show_starting_line' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "trace_show_line = m_b_trace(show_starting_line['m'], show_starting_line['b'], show_x_values, name = 'starting line')"
    ]
