Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +991,7 @@
        "{'b': 150.0, 'm': 1.25}"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,21 +1003,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'show_starting_line' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-42-572e6bc202e2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrace_show_line\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mm_b_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshow_starting_line\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'm'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshow_starting_line\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'b'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshow_x_values\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'starting line'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'show_starting_line' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "trace_show_line = m_b_trace(show_starting_line['m'], show_starting_line['b'], show_x_values, name = 'starting line')"
    ]
@@ -1047,19 +1035,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'x': [200, 300, 400, 600],\n",
-       " 'y': [400, 500, 700, 900],\n",
-       " 'mode': 'markers',\n",
-       " 'name': 'comedy show data'}"
+       "{'mode': 'markers',\n",
+       " 'name': 'comedy show data',\n",
+       " 'x': [200, 300, 400, 600],\n",
+       " 'y': [400, 500, 700, 900]}"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1141,9 +1129,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'd1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-46-aa9d53859263>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcomedy_show_trace\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0md1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'd1' is not defined"
+     ]
+    }
+   ],
    "source": [
     "comedy_show_trace = d1"
    ]
