Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1104,6 +1104,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c1 = comedy_show_trace.co"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
    "outputs": [
