Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1104,11 +1104,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mode': 'markers',\n",
+       " 'name': 'comedy show data',\n",
+       " 'x': [200, 300, 400, 600],\n",
+       " 'y': [400, 500, 700, 900]}"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c1 = comedy_show_trace.copy()\n",
+    "c1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "c1 = comedy_show_trace.co"
+    "c1['mode']"
    ]
   },
   {
