--- a/index.ipynb
+++ b/index.ipynb
@@ -1137,12 +1137,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mode': 'line',\n",
+       " 'name': 'comedy show data',\n",
+       " 'x': [200, 300, 400, 600],\n",
+       " 'y': [400, 500, 700, 900]}"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "c"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
