Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,14 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,26 +958,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'x': [200, 300, 400, 600],\n",
-       " 'y': [400, 500, 700, 900],\n",
-       " 'mode': 'markers',\n",
-       " 'name': 'comedy show data'}"
+       "{'mode': 'markers',\n",
+       " 'name': 'comedy show data',\n",
+       " 'x': [200, 400, 300, 600],\n",
+       " 'y': [400, 700, 500, 900]}"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,14 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +991,7 @@
        "{'b': 150.0, 'm': 1.25}"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1024,7 @@
        " 'y': [400.0, 525.0, 650.0, 900.0]}"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
