Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +984,7 @@
        " 'name': 'comedy show data'}"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1012,7 @@
        "{'b': 150.0, 'm': 1.25}"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
        " 'y': [400.0, 525.0, 650.0, 900.0]}"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1056,19 +1056,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'mode': 'markers',\n",
-       " 'name': 'comedy show data',\n",
-       " 'x': [200, 300, 400, 600],\n",
-       " 'y': [400, 500, 700, 900]}"
+       "{'x': [200, 300, 400, 600],\n",
+       " 'y': [400, 500, 700, 900],\n",
+       " 'mode': 'markers',\n",
+       " 'name': 'comedy show data'}"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
