Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1203,18 +1203,27 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    trace_sho"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mode': 'line',\n",
+       " 'name': 'line function',\n",
+       " 'x': [200, 300, 400, 600],\n",
+       " 'y': [400.0, 525.0, 650.0, 900.0]}"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trace_show_line"
+   ]
   },
   {
    "cell_type": "code",
