Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1033,6 +1033,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trace_show_line = m_b_trace(show_starting_line['m'], show_starting_line['b'], show_x_values, name = 'starting line')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 73,
    "metadata": {},
    "outputs": [
