Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -368,12 +368,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'lines', name = 'line function'):\n",
-    "    ret_dict = {'mode':'line', 'name': 'line function'}\n",
+    "    ret_dict = {'mode':'lines', 'name': 'line function'}\n",
     "#    ret_dict.update(m_b_data(m, b, x_values))\n",
     "    d = m_b_data(m, b, x_values)\n",
     "    ret_dict.update(d)\n",
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,19 +394,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'mode': 'line',\n",
+       "{'mode': 'lines',\n",
        " 'name': 'line function',\n",
        " 'x': [0, 50, 100],\n",
        " 'y': [20.0, 95.0, 170.0]}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
