Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -972,19 +972,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'x': [200, 300, 400, 600],\n",
-       " 'y': [400, 500, 700, 900],\n",
+       "{'x': [200, 400, 300, 600],\n",
+       " 'y': [400, 700, 500, 900],\n",
        " 'mode': 'markers',\n",
        " 'name': 'comedy show data'}"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1042,19 +1042,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'mode': 'line',\n",
+       "{'mode': 'lines',\n",
        " 'name': 'line function',\n",
-       " 'x': [200, 300, 400, 600],\n",
-       " 'y': [400.0, 525.0, 650.0, 900.0]}"
+       " 'x': [200, 400, 300, 600],\n",
+       " 'y': [400.0, 650.0, 525.0, 900.0]}"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1065,19 +1065,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'x': [200, 300, 400, 600],\n",
-       " 'y': [400, 500, 700, 900],\n",
+       "{'x': [200, 400, 300, 600],\n",
+       " 'y': [400, 700, 500, 900],\n",
        " 'mode': 'markers',\n",
        " 'name': 'comedy show data'}"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,19 +1111,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'x': [200, 300, 400, 600],\n",
-       " 'y': [400, 500, 700, 900],\n",
+       "{'x': [200, 400, 300, 600],\n",
+       " 'y': [400, 700, 500, 900],\n",
        " 'mode': 'markers',\n",
        " 'name': 'comedy show data'}"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
